--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swm-client-lib": "^1.0.0"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
