--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "swm-client-lib": "^1.0.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
