--- a/lib/package.json
+++ b/lib/package.json
@@ -14,7 +14,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "snowpack dev --port 3333",
     "build": "snowpack build",
-    "publish": "npm publish"
+    "publish": "npm publish",
+    "format": "prettier --write \"swm.js\"",
+    "lint": "prettier --check \"**/*.{js,jsx}\""
   },
   "author": "Carl Anderson (carl.anderson@microsoft.com)",
   "license": "MIT",
@@ -22,6 +24,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "snowpack": "^3.3.7"
+    "snowpack": "^3.3.7",
+    "prettier": "^2.2.1"
   }
 }
