--- a/lib/package.json
+++ b/lib/package.json
@@ -1,8 +1,8 @@
 {
   "name": "swm-client-lib",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
-  "main": "demo.html",
+  "main": "index.html",
   "exports": {
     ".": {
       "browser": {
@@ -15,8 +15,8 @@
     "start": "snowpack dev --port 3333",
     "build": "snowpack build",
     "publish": "npm publish",
-    "format": "prettier --write \"swm.js\"",
-    "lint": "prettier --check \"**/*.{js,jsx}\""
+    "format": "prettier --write swm.js",
+    "lint": "prettier --check swm.js"
   },
   "author": "Carl Anderson (carl.anderson@microsoft.com)",
   "license": "MIT",
