--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "snowpack dev --port 8001",
+    "start": "snowpack dev --port 8001 --reload",
     "build": "snowpack build",
     "postbuild": "./deploy.sh",
     "test": "web-test-runner \"src/**/*.test.jsx\"",
