--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swm-client-lib",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.html",
   "exports": {
@@ -24,7 +24,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "snowpack": "^3.3.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "snowpack": "^3.3.7"
   }
 }
