--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swm-client-lib": "^0.3.3"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
